force-app/main/default/objects/Sub_Project__c/Sub_Project__c.object-meta.xml
<CustomObject>
    <description>Child of the Parent Project ties together under a single Customer Reference # the Account, related Locations/Addresses, permits, Locates, and Work Orders</description>
    <label>Sub Project</label>
    <nameField>
        <displayFormat>SP-{0000000}</displayFormat>
        <label>Sub Project #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sub Projects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>