force-app/main/default/objects/Sub_Project__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>29512 Hidden in UI for now used to prevent duplicate records</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sub Projects</relationshipLabel>
    <relationshipName>Sub_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>