force-app/main/default/objects/Sub_Project__c/fields/Cancelation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancelation_Reason__c</fullName>
    <description>29526</description>
    <inlineHelpText>Reason that the Sub Project was Canceled</inlineHelpText>
    <label>Cancelation Reason</label>
    <type>TextArea</type>
</CustomField>