force-app/main/default/objects/Sub_Project__c/fields/Customer_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Reference_Number__c</fullName>
    <description>29512</description>
    <label>Customer Reference Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>