force-app/main/default/objects/Sub_Project__c/fields/On_Hold_Date__c.field-meta.xml
<CustomField>
    <fullName>On_Hold_Date__c</fullName>
    <description>29526</description>
    <inlineHelpText>Date that the Sub Project was last put On Hold</inlineHelpText>
    <label>On Hold Date</label>
    <type>Date</type>
</CustomField>