force-app/main/default/objects/Sub_Project__c/fields/On_Hold_Reason__c.field-meta.xml
<CustomField>
    <fullName>On_Hold_Reason__c</fullName>
    <description>29526</description>
    <inlineHelpText>Reason Sub Project is On Hold</inlineHelpText>
    <label>On Hold Reason</label>
    <type>TextArea</type>
</CustomField>