force-app/main/default/objects/Sub_Project__c/fields/Planned_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Planned_Completion_Date__c</fullName>
    <inlineHelpText>29512</inlineHelpText>
    <label>Planned Completion Date</label>
    <type>Date</type>
</CustomField>