force-app/main/default/objects/Sub_Project__c/fields/Planned_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Planned_Start_Date__c</fullName>
    <description>29512</description>
    <inlineHelpText>Estimated Start Date</inlineHelpText>
    <label>Planned Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>