force-app/main/default/objects/Sub_Project__c/fields/Primary_Address__c.field-meta.xml
<CustomField>
    <fullName>Primary_Address__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>29512</description>
    <inlineHelpText>Primary address for the Sub Project which is passed to any new Work Order. A Sub Project may have multiple Addresses which are found by opening the related Locations record.</inlineHelpText>
    <label>Primary Address</label>
    <referenceTo>Address</referenceTo>
    <relationshipLabel>Sub Project (Primary Address)</relationshipLabel>
    <relationshipName>Sub_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>