force-app/main/default/objects/Sub_Project__c/fields/Primary_Address_Text__c.field-meta.xml
<CustomField>
    <fullName>Primary_Address_Text__c</fullName>
    <description>29512 45294</description>
    <formula>Primary_Address__r.Formatted_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Returns the address including Lat/Long</inlineHelpText>
    <label>Primary Address</label>
    <type>Text</type>
</CustomField>