force-app/main/default/objects/Sub_Project__c/fields/Project_Territory_Account_Project__c.field-meta.xml
<CustomField>
    <fullName>Project_Territory_Account_Project__c</fullName>
    <description>28048</description>
    <formula>Project__r.Service_Territory__r.Name &amp;&quot;-&quot;&amp;Project__r.Name &amp;&quot;(&quot;&amp;LEFT( Project__r.Title__c ,50)&amp;&quot;)-&quot;&amp;  Project__r.Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Territory-Account-Project</label>
    <type>Text</type>
</CustomField>