force-app/main/default/objects/Sub_Project__c/fields/Searchable_Primary_Address__c.field-meta.xml
<CustomField>
    <fullName>Searchable_Primary_Address__c</fullName>
    <description>Searchable text field for Primary Address for Story 36684</description>
    <label>Searchable Primary Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>