force-app/main/default/objects/Sub_Project__c/fields/Summarized_Completed_Estimates__c.field-meta.xml
<CustomField>
    <fullName>Summarized_Completed_Estimates__c</fullName>
    <description>The child Work Orders that are completed have their Subtotal Estimates summarized here.</description>
    <inlineHelpText>The child Work Orders that are completed have their Subtotal Estimates summarized here.</inlineHelpText>
    <label>Summarized Completed Estimates</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>