force-app/main/default/objects/Sub_Project__c/fields/Summarized_Estimated_Man_Hours__c.field-meta.xml
<CustomField>
    <fullName>Summarized_Estimated_Man_Hours__c</fullName>
    <description>This is a summary of the total value of the Total Estimated Man Hours on all child Work Orders.</description>
    <inlineHelpText>This is a summary of the total value of the Total Estimated Man Hours on all child Work Orders.</inlineHelpText>
    <label>Summarized Estimated Man Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>