force-app/main/default/objects/Sub_Project__c/fields/Summarized_Estimates__c.field-meta.xml
<CustomField>
    <fullName>Summarized_Estimates__c</fullName>
    <description>This is a summary of the total value of the Subtotal Estimates on all child Work Orders.</description>
    <inlineHelpText>This is a summary of the total value of the Subtotal Estimates on all child Work Orders.</inlineHelpText>
    <label>Summarized Estimates</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>