force-app/main/default/objects/Sub_Project__c/fields/Summarized_Estimates_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Summarized_Estimates_Outstanding__c</fullName>
    <description>Equals Summarized Estimates - Summarized Completed Estimates.</description>
    <formula>Summarized_Estimates__c - Summarized_Completed_Estimates__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Equals Summarized Estimates - Summarized Completed Estimates.</inlineHelpText>
    <label>Summarized Estimates Outstanding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>