force-app/main/default/objects/Sub_Project__c/fields/Summarized_Total_Estimated_Cost__c.field-meta.xml
<CustomField>
    <fullName>Summarized_Total_Estimated_Cost__c</fullName>
    <description>This is summary of all Work Order -&gt; Total Estimated Cost values.</description>
    <inlineHelpText>This is summary of all Work Order -&gt; Total Estimated Cost values.</inlineHelpText>
    <label>Summarized Total Estimated Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>