force-app/main/default/objects/Sub_Project__c/recordTypes/NPLUS_Basic.recordType-meta.xml
<RecordType>
    <fullName>NPLUS_Basic</fullName>
    <active>true</active>
    <description>Basic Sub Project type (default)</description>
    <label>NPLUS Basic</label>
</RecordType>