force-app/main/default/objects/Sub_Project__c/validationRules/DATE_SYNC.validationRule-meta.xml
<ValidationRule>
    <fullName>DATE_SYNC</fullName>
    <active>true</active>
    <description>#29512 Can&apos;t plan to end before you start</description>
    <errorConditionFormula>Planned_Start_Date__c &gt; Planned_Completion_Date__c</errorConditionFormula>
    <errorMessage>Sub Project Planned Start Date cannot be after the Planned Completion Date</errorMessage>
</ValidationRule>