force-app/main/default/objects/Sub_Project__c/validationRules/ISBLANK_CANCELATION_DATE.validationRule-meta.xml
<ValidationRule>
    <fullName>ISBLANK_CANCELATION_DATE</fullName>
    <active>true</active>
    <description>29526</description>
    <errorConditionFormula>AND(
ISBLANK( Cancelation_Date__c  ),
TEXT( Status__c ) = &apos;Canceled&apos;)</errorConditionFormula>
    <errorMessage>Sub Project Cancelation Date is required when status is Canceled</errorMessage>
</ValidationRule>