force-app/main/default/objects/Sub_Project__c/validationRules/ISBLANK_CANCELATION_REASON.validationRule-meta.xml
<ValidationRule>
    <fullName>ISBLANK_CANCELATION_REASON</fullName>
    <active>true</active>
    <description>29526</description>
    <errorConditionFormula>AND(
ISBLANK(  Cancelation_Reason__c   ),
TEXT( Status__c ) = &apos;Canceled&apos;)</errorConditionFormula>
    <errorMessage>Sub Project Cancelation Reason is required when status is Canceled</errorMessage>
</ValidationRule>