force-app/main/default/objects/Sub_Project__c/validationRules/ISBLANK_CLOSED_DATE.validationRule-meta.xml
<ValidationRule>
    <fullName>ISBLANK_CLOSED_DATE</fullName>
    <active>true</active>
    <description>29526</description>
    <errorConditionFormula>AND(
ISBLANK( Closed_Date__c ),
TEXT( Status__c ) = &apos;Closed&apos;)</errorConditionFormula>
    <errorMessage>Sub Project Closed Date is required when status is Closed</errorMessage>
</ValidationRule>