force-app/main/default/objects/Sub_Project__c/validationRules/ISBLANK_ON_HOLD_DATE.validationRule-meta.xml
<ValidationRule>
    <fullName>ISBLANK_ON_HOLD_DATE</fullName>
    <active>true</active>
    <description>29526</description>
    <errorConditionFormula>AND(
ISBLANK(  On_Hold_Date__c   ),
TEXT( Status__c ) = &apos;On Hold&apos;)</errorConditionFormula>
    <errorMessage>Sub Project On Hold Date is required when status is On Hold</errorMessage>
</ValidationRule>