force-app/main/default/objects/Sub_Project__c/validationRules/ISBLANK_ON_HOLD_REASON.validationRule-meta.xml
<ValidationRule>
    <fullName>ISBLANK_ON_HOLD_REASON</fullName>
    <active>true</active>
    <description>29526</description>
    <errorConditionFormula>AND(
ISBLANK(   On_Hold_Reason__c    ),
TEXT( Status__c ) = &apos;On Hold&apos;)</errorConditionFormula>
    <errorMessage>Sub Project On Hold Reason is required when status is On Hold</errorMessage>
</ValidationRule>