force-app/main/default/objects/Sub_Project__c/validationRules/ISBLANK_PRIMARY_ADDRESS.validationRule-meta.xml
<ValidationRule>
    <fullName>ISBLANK_PRIMARY_ADDRESS</fullName>
    <active>true</active>
    <description>29636. Require Primary after initial creation</description>
    <errorConditionFormula>AND(
NOT(ISNEW()), ISBLANK( Primary_Address__c ))</errorConditionFormula>
    <errorMessage>Sub Project Primary Address is required.</errorMessage>
</ValidationRule>