force-app/main/default/objects/Sub_Project__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Title__c</columns>
    <columns>Planned_Start_Date__c</columns>
    <columns>Project__c</columns>
    <columns>Account__c</columns>
    <columns>Customer_Reference_Number__c</columns>
    <columns>Description__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>